backend_sources += files(
  'backend_progress.c',
  'backend_status.c',
  'pgstat_archiver.c',
  'pgstat_bgwriter.c',
  'pgstat_checkpointer.c',
  'pgstat_database.c',
  'pgstat_function.c',
  'pgstat_relation.c',
  'pgstat_replslot.c',
  'pgstat_slru.c',
  'pgstat_subscription.c',
  'pgstat_wal.c',
  'wait_event.c',
)
